# nebius_mcp_course_materials

lesson_2/expected_output/: analysis.py  pyproject.toml  server.py  tools.py
lesson_2/input/: analysis.py  pyproject.toml  server.py  tools.py
lesson_3/input/: tools.py
lesson_4/expected_output/: Dockerfile  README.md  agent_sample.py  pyproject.toml
lesson_4/input/: http_utils.py  mock_git_utils.py  tools.py
lesson_5/input/: analysis.py  tools.py
practice_1/: prompt.md
practice_1/expected_output/: README.md  analysis.py  git_utils.py  server.py  tools.py
practice_1/input/: README.md  pyproject.toml
practice_1/tests/: test_expected_output.py
practice_2/: prompt.md
practice_2/expected_output/: README.md  pyproject.toml  server.py  tools.py
practice_2/input/: README.md  tools.py
practice_2/tests/: test_expected_output.py
practice_3/: prompt.md
practice_3+4/: prompt.md
practice_3+4/expected_output/: README.md  config.json
practice_3+4/input/: README.md  pyproject.toml  tools.py
practice_3+4/tests/: test_expected_output.py
practice_3/expected_output/: README.md  app.py  cache.py
practice_3/input/: README.md  analysis.py  pyproject.toml
practice_3/input/tests/: test_tools.py
practice_3/tests/: test_expected_output.py
practice_4/: prompt.md
practice_4/expected_output/: pyproject.toml
practice_4/input/: README.md
practice_4/tests/: test_expected_output.py
practice_5/: prompt.md
practice_5/expected_output/: README.md  pyproject.toml  server.py  tools.py
practice_6/: prompt.md
practice_6/input/: Dockerfile  README.md  mcp_agent_demo.py  mcp_client_demo.py  pyproject.toml  security.py
(+13 files in other folders)
