[project]
name = "mcp-validation-practice"
version = "0.1.0"
description = "MCP server validation practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.46",
    "httpx>=0.27.0",
    "mcp>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
